@@ -2,6 +2,7 @@ Revision history for URI
 
 {{$NEXT}}
     - Add smb scheme (buralien)
+    - Add authority() to URI::otpauth (GH#152) (hightowe)
 
 5.31      2024-11-06 03:38:29Z
     - Re-releasing with corrected module permissions. No changes since 5.31
